[tool.poetry]
name = "python-template"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = ">=3.10.0,<3.11"
platformdirs = "^3.5.0"
steamship-langchain = "0.0.20rc2"
termcolor = "^2.3.0"
inquirer = "^3.1.3"
steamship = "2.16.6"

[tool.poetry.dev-dependencies]
debugpy = "^1.6.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"